--- a/js/templates/login.hbs
+++ b/js/templates/login.hbs
@@ -1,9 +1,9 @@
 <p>Welcome, who are you?)</p>
 
 <div class="loginFields">
-    <p><input type="text" class="userNameInput" value="" name="username"/></p>
-    <p><input type="checkbox" class="ckBox" name="freerun" value="freerun">freerun</p>
-    <p><input type="checkbox" class="ckBox" name="run" value="run">run</p>
-    <p><input type="checkbox" class="ckBox" name="skating" value="skating">skating</p>
+    <p class="ckBox" ><input type="text" class="userNameInput" value="" name="username"/></p>
+    <p class="ckBox" ><input type="checkbox" name="freerun" value="freerun">freerun</p>
+    <p class="ckBox" ><input type="checkbox" name="run" value="run">run</p>
+    <p class="ckBox" ><input type="checkbox" name="skating" value="skating">skating</p>
     <p><input type="button" value="join" name="join"/></p>
 </div>
