--- a/js/templates/login.hbs
+++ b/js/templates/login.hbs
@@ -5,5 +5,5 @@
     <p class="ckBox" ><input type="checkbox" name="freerun" value="freerun">freerun</p>
     <p class="ckBox" ><input type="checkbox" name="run" value="run">run</p>
     <p class="ckBox" ><input type="checkbox" name="skating" value="skating">skating</p>
-    <p><input type="button" value="join" name="join"/></p>
+    <p><input type="button" class="join" value="join" name="join"/></p>
 </div>
