Added header & styles

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,75 @@ body {
     display: inline;
   }
 
+  #header .navbar {
+    background: #3D0C42;
+  }
+  #header .navbar .navbar-toggle:hover, 
+  #header .navbar .navbar-toggle:focus,
+  #header .navbar-nav > .open > a {
+    background: #490E4F;
+  }
+  #header .navbar-header {
+    margin-right: 0;
+    margin-left: 0;
+    float: left;
+  }
+
+  #header .navbar-brand {
+    margin-left: -15px;
+  }
+  #header .navbar-right {
+    float: right !important;
+  }
+  #header .navbar-form {
+    width: auto;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-right: 0;
+    margin-left: 0;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+  #header .navbar-form .form-group {
+    margin-bottom: 0;
+  }
+  #header .navbar-nav {
+    margin: 0;
+  }
+  #header .navbar-nav > li {
+    float: left;
+  }
+  #header .navbar-nav > li > a {
+    padding-top: 12px;
+    padding-bottom: 13px;
+    font-size: 20px;
+  }
+  #header .dropdown-menu {
+    position: absolute;
+    right: 0;
+    left: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, .15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+  }
+  #header .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #333;
+    padding: 10px 15px 10px 25px;
+  }
+  
+  #logo {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background: url(/i/logo/logo2_sq.png) 0 0 no-repeat;
+    background-size: 100% 100%;
+  }
+
   .home-page {
     width: 551px;
     height: 275px;
