--- a/js/templates/site.hbs
+++ b/js/templates/site.hbs
@@ -1,5 +1,5 @@
 <div id="site-container"><div class="header-container" id="header-container">
-    <header class="header">
+    <header id="header">
     </header>
 </div>
 
