--- a/js/templates/login.hbs
+++ b/js/templates/login.hbs
@@ -1,7 +1,7 @@
 <p>Welcome, who are you?)</p>
 
 <div class="loginFields">
-    <p class="ckBox" ><input type="text" class="userNameInput" value="" name="username"/></p>
+    <p class="ckBox" ><input id="userNameInput" type="text" class="userNameInput" value="" name="username"/></p>
     <p class="ckBox" ><input type="checkbox" name="freerun" value="freerun">freerun</p>
     <p class="ckBox" ><input type="checkbox" name="run" value="run">run</p>
     <p class="ckBox" ><input type="checkbox" name="skating" value="skating">skating</p>
