--- a/js/templates/site.hbs
+++ b/js/templates/site.hbs
@@ -1,4 +1,5 @@
-<div id="site-container"><div class="header-container" id="header-container">
+
+<div class="header-container" id="header-container">
     <header id="header">
     </header>
 </div>
@@ -11,11 +12,3 @@
     </div>
   </div>
 </div>
-</div>
-
-<!-- Inline styles are not good, write them in their own files. -->
-<!-- This is just an example. -->
-<style>
-
-
-</style>
