--- a/js/templates/header.hbs
+++ b/js/templates/header.hbs
@@ -7,7 +7,7 @@
 		<ul class="nav navbar-nav navbar-right">
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					<span class="glyphicon glyphicon-big glyphicon-align-justify"></span>
+					<span class="glyphicon glyphicon-align-justify"></span>
 				</a>
 				<ul class="dropdown-menu">
 					<li><a href="#">
