--- a/js/templates/header.hbs
+++ b/js/templates/header.hbs
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
-			<a class="navbar-brand" id="logo" href="#"></a>
+			<a class="navbar-brand" id="logo" href="/"></a>
 		</div>
 		<ul class="nav navbar-nav navbar-right">
 			<li class="dropdown">
@@ -10,11 +10,15 @@
 					<span class="glyphicon glyphicon-align-justify"></span>
 				</a>
 				<ul class="dropdown-menu">
-					<li><a href="#">
+					<li><a href="/profile">
+						<span class="glyphicon glyphicon-user"></span>
+						Profile
+					</a></li>
+					<li><a href="/settings">
 						<span class="glyphicon glyphicon-cog"></span>
 						Settings
 					</a></li>
-					<li><a href="#">
+					<li><a href="/logout">
 						<span class="glyphicon glyphicon-off"></span>
 						Log Out
 					</a></li>
