--- a/js/templates/site.hbs
+++ b/js/templates/site.hbs
@@ -1,4 +1,3 @@
-
 <div class="header-container" id="header-container">
     <header id="header">
     </header>
@@ -8,4 +7,7 @@
   <div class="page-container" id="page-container">
     <div id="main-container"></div>
   </div>
+    <div id="addEvent">
+        <input type="submit" class="addEvent" value="Create Event"/>
+    </div>
 </div>
