--- a/js/templates/events/new.hbs
+++ b/js/templates/events/new.hbs
@@ -7,3 +7,4 @@
 <p><input type="checkbox"/>freerunning</p>
 <p><input type="checkbox"/>basketball</p>
 <div id="newEventMap"></div>
+<div><input type="submit" name="Add" value="Add"></div>
