--- a/js/templates/site.hbs
+++ b/js/templates/site.hbs
@@ -8,6 +8,6 @@
     <div id="main-container"></div>
   </div>
     <div id="addEvent">
-        <a href="#new" class="addEvent">Create Event</a>
+        <a href="#new" class="btn btn-primary btn-lg active addEvent" role="button">Create Event</a>
     </div>
 </div>
