fix create button

--- a/js/templates/site.hbs
+++ b/js/templates/site.hbs
@@ -7,7 +7,7 @@
   <div class="page-container" id="page-container">
     <div id="main-container"></div>
   </div>
-    <div id="addEvent">
+    <div id="addEvent" class="bg-danger addEvent">
         <a href="#new" class="btn btn-primary btn-lg active addEvent" role="button">Create Event</a>
     </div>
 </div>
