--- a/css/style.css
+++ b/css/style.css
@@ -108,10 +108,6 @@ body {
     overflow: auto;
     position: relative;
   }
-
-
-
-
 #mapView{
   position: absolute;
   top:0;
@@ -127,6 +123,9 @@ body {
   height:50%;
     width:50%;
     
+}
+#addEvent{
+    display:none;
 }
 .addEvent{
     position:absolute;
