--- a/js/templates/main/index.hbs
+++ b/js/templates/main/index.hbs
@@ -1,2 +1,4 @@
 <div id="mapView"></div>
-<a href="#new" id="addEvent" class="addEvent" title="Create Event"></a>
+<div id="addEvent">
+	<a href="#new" title="Create Event"></a>
+</div>
