--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,9 @@ body {
     width:50%;
     padding-right:10px;
 }
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
