--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,43 @@ body {
     width:50%;
     padding-right:10px;
 }
+
+.eventPopover {
+  padding: 10px;
+  font-size: 14px !important;
+  font-weight: normal !important;
+  position: relative;
+}
+.eventPopover div {
+  font-size: 14px !important;
+  font-weight: normal !important;
+}
+.eventPopover h1 {
+  margin-top: 0;
+}
+.eventPopover .subscribed {
+  overflow: hidden;
+  padding-right: 60px;
+}
+.eventPopover .subscribed p {
+  font-weight: bold;
+  font-size: 16px;
+  float: left;
+}
+.eventPopover .subscribed ul {
+  list-style: 0;
+  margin: 2px 0 0 0;
+  padding: 0;
+  overflow: hidden;
+}
+.eventPopover .subscribed li {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 5px;
+  padding: 0;
+}
+
+.eventPopover .btn-subscribe {
+  position: absolute;
+  bottom:10px; right:0;
+}
