--- a/js/templates/events/new.hbs
+++ b/js/templates/events/new.hbs
@@ -14,17 +14,17 @@
             <div class="form-group">
                 <label for="eventType">Select category</label>
                 <select name="tag" id="eventType"  class="form-control">
-                    <option value="0">Bike</option>
-                    <option value="1">Chess</option>
-                    <option value="2">Football</option>
-                    <option value="3">Parkour</option>
-                    <option value="4">Running</option>
-                    <option value="5">Skateboarding</option>
-                    <option value="6">Strike</option>
-                    <option value="7">Swimming</option>
-                    <option value="8">Volunteer</option>
-                    <option value="9">Horse Riding</option>
-                    <option value="10">Skating</option>
+                    <option value="3"> Bike</option>
+                    <option value="4"> Chess</option>
+                    <option value="5"> Football</option>
+                    <option value="6"> Parkour</option>
+                    <option value="7"> Running</option>
+                    <option value="8"> Skateboarding</option>
+                    <option value="9"> Strike</option>
+                    <option value="10"> Volunteer</option>
+                    <option value="11"> Skating</option>
+                    <option value="12"> Swimming</option>
+                    <option value="13"> Horse Riding</option>
                 </select>
             </div>
         </div>
@@ -46,7 +46,7 @@
         </div>
         <input type="hidden" name="lat" class="inputLat">
         <input type="hidden" name="lng" class="inputLng">
-        
-        <button type="submit" class="btn btn-default btn-submit btn-primary btn-lg">Save</button>
+
+        <button type="submit" class="btn btn-default btn-submit btn-primary btn-lg disabled">Save</button>
     </div>
 </form>
