--- a/js/templates/header.hbs
+++ b/js/templates/header.hbs
@@ -14,10 +14,6 @@
 						<span class="glyphicon glyphicon-user"></span>
 						Profile
 					</a></li>
-					<li><a href="/settings">
-						<span class="glyphicon glyphicon-cog"></span>
-						Settings
-					</a></li>
 					<li><a href="/logout">
 						<span class="glyphicon glyphicon-off"></span>
 						Log Out
@@ -25,7 +21,7 @@
 				</ul>
 			</li>
 		</ul>
-		<form class="navbar-form navbar-right" role="search">
+		<form class="navbar-form navbar-right" role="search" style="display:none !important">
 			<div class="form-group">
 				<div class="input-group" style="width:218px; display:inline-block; vertical-align: middle;">
 					<input type="text" class="form-control" placeholder="Search" style="display: inline-block; width: auto; vertical-align: middle;">
