--- a/js/templates/user/edit.hbs
+++ b/js/templates/user/edit.hbs
@@ -1,2 +1,2 @@
 <p class="bg-info center-block">Your name is:</p>
-<p class="bg-info center-block">{{username}}</p>
+<p class="bg-info center-block">{{name}}</p>
