--- a/js/templates/user/login.hbs
+++ b/js/templates/user/login.hbs
@@ -5,15 +5,16 @@
 		</div>
 	</div>
 	<div class="form-group">
-		<label for="inputUsername" class="col-sm-3 col-sm-offset-2 control-label">Username</label>
+		<label for="inputLogin" class="col-sm-3 col-sm-offset-2 control-label">Login</label>
 		<div class="col-sm-4">
-			<input type="text" name="username" class="form-control" id="inputUsername" placeholder="Username">
+			<input type="text" name="login" class="form-control" id="inputLogin" placeholder="Login">
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="inputPassword" class="col-sm-3 col-sm-offset-2 control-label">Password</label>
 		<div class="col-sm-4">
-			<input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
+			<input type="password" name="pass" class="form-control" id="inputPassword" placeholder="Password">
+			<span class="bang glyphicon glyphicon-exclamation-sign"></span>
 		</div>
 	</div>
 	<div class="form-group">
