--- a/js/templates/main/popover.hbs
+++ b/js/templates/main/popover.hbs
@@ -1,7 +1,7 @@
 <div class="eventPopover">
 	<h1 class="title">{{title}}</h1>
 	<p class="description">{{description}}</p>
-	<div class="subscribed">
+	<div class="subscribed" style="display:none">
 		<p>Visitors: </p>
 		<ul>
 			{{#each users}}
