--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ body {
 
 
 .eventPopover {
-  padding: 10px;
+  padding: 10px 10px 60px 10px;
   font-size: 14px !important;
   font-weight: normal !important;
   position: relative;
